--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -1,16 +1,165 @@
-@import "colors";
-@import "~bootstrap";
+@import "theme";
 
-body {
-  font-family: "Montserrat", "Roboto", "Open Sans", "Tahoma", "Arial", sans-serif;
-  background-color: $dark;
-  color: $light;
+$theme: 'dark';
+
+@keyframes ColorGradient {
+  0% {background-position: 0 50%}
+  50% {background-position: 100% 50%}
+  100% {background-position: 0 50%}
 }
 
-.list-group-item {
-  background-color: $primary;
-  border-color: transparent;
+* {
+  box-sizing: border-box;
+}
+
+html, body {
+  margin: 0;
+  height: 100%;
+}
+
+body {
+  font-family: 'Montserrat', 'Open Sans', sans-serif;
+  font-size: 16px;
+  background-color: color($theme, 'background');
+  color: color($theme, 'color');
+}
+
+a,
+a:visited {
+  color: color($theme, 'primary');
+  text-decoration: none;
+  &:hover {
+    color: lighten(color($theme, 'primary'), 10%);
+  }
+}
+
+#app {
+  position: relative;
+  height: 100%;
+  overflow: hidden;
+
+  &.perfect {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+  }
+
+  .app-name {
+    font-size: 4rem;
+    font-weight: 700;
+    color: color($theme, 'primary');
+    background: linear-gradient(270deg, color($theme, 'primary'), color($theme, 'secondary'));
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    -webkit-animation: ColorGradient 10s ease infinite;
+    background-size: 400% 400%;
+    text-align: center;
+
+    @media (min-width: 768px) {
+      font-size: 6rem;
+    }
+
+    @media (min-width: 992px) {
+      font-size: 7rem;
+    }
+
+    @media (min-width: 1200px) {
+      font-size: 9rem;
+    }
+  }
+
+  .app-details {
+    text-align: center;
+
+    .app-link {
+      margin: 0 1rem;
+    }
+  }
+}
+
+.page {
+  padding: 2rem;
+  max-width: 800px;
+  margin: 0 auto;
+}
+
+.task {
+  display: block;
+  padding: 1rem;
+  margin-top: 1rem;
+  background-color: lighten(color($theme, 'background'), 5%);
+  color: color($theme, 'color') !important;
+  text-decoration: none;
+
   &.completed {
-    background-color: $success;
+    background-color: rgba(color($theme, 'success'), 0.2);
+  }
+
+  .task-created {
+    color: darken(color($theme, 'color'), 50%);
+  }
+
+  .task-actions {
+    padding-top: 0.5rem;
+
+    .task-action {
+      background-color: transparent;
+      border: none;
+      outline: none;
+      cursor: pointer;
+      padding: 0.5rem;
+      font-size: 1rem;
+      font-family: "Montserrat", "Open Sans", sans-serif;
+      display: inline;
+    }
+
+    .task-action-primary {color: color($theme, 'primary');}
+    .task-action-info {color: color($theme, 'info');}
+    .task-action-warning {color: color($theme, 'warning');}
+    .task-action-danger {color: color($theme, 'danger');}
+  }
+}
+
+.button {
+  display: inline-block;
+  position: relative;
+  padding: 0.7rem 1.7rem;
+  margin: 0 0.3rem 0.3rem 0;
+  border-radius: 0.2rem;
+  border: none;
+  outline: none;
+  background-color: color($theme, 'primary');
+  color: color($theme, 'color') !important;
+  text-align: center;
+
+  &:hover {
+    box-shadow: inset 0 0.6em 2em -0.3em rgba(0,0,0,0.15), inset 0 0 0em 0.05em rgba(255,255,255,0.12);
+  }
+
+  &:active {
+    box-shadow: inset 0 -0.6em 1em -0.35em rgba(0,0,0,0.17), inset 0 0.6em 2em -0.3em rgba(255,255,255,0.15), inset 0 0 0em 0.05em rgba(255,255,255,0.12);
+  }
+}
+
+.form {
+  display: block;
+  padding: 1rem;
+  margin-top: 1rem;
+  background-color: lighten(color($theme, 'background'), 5%);
+
+  label {
+    display: block;
+  }
+
+  input {
+    display: block;
+    margin: 0.5rem 0;
+    padding: 0.5rem;
+    width: 100%;
+    outline: none;
+    border: none;
+    background-color: lighten(color($theme, 'background'), 15%);
+    color: color($theme, 'color');
   }
 }
